--- a/SRteacher/DACC-schoolReport-student.html
+++ b/SRteacher/DACC-schoolReport-student.html
@@ -129,36 +129,36 @@
                 <table class="table table-bordered mb-0 table-studentAssessment" id="studentAssessment">
                   <thead>
                     <tr>
-                      <th scope="col" class="col-name">標準名稱</th>
-                      <th scope="col" class="col-value">標準對應值</th>
+                      <th scope="col" class="col-standardName">標準名稱</th>
+                      <th scope="col" class="col-standardValue">標準對應值</th>
                       <th scope="col" class="col-percentage">百分占比</th>
-                      <th scope="col" class="col-num">人數</th>
+                      <th scope="col" class="col-count">人數</th>
                     </tr>
                   </thead>
                   <tbody>
                     <tr>
-                      <td class="col-name bg-advanced">進階<small>Advanced</small></td>
-                      <td class="col-value">---</td>
+                      <td class="col-standardName bg-advanced">進階<small>Advanced</small></td>
+                      <td class="col-standardValue">---</td>
                       <td class="col-percentage">---</td>
-                      <td class="col-num">---</td>
+                      <td class="col-count">---</td>
                     </tr>
                     <tr>
-                      <td class="col-name bg-proficient">熟讀<small>Proficient</small></td>
-                      <td class="col-value">---</td>
+                      <td class="col-standardName bg-proficient">熟讀<small>Proficient</small></td>
+                      <td class="col-standardValue">---</td>
                       <td class="col-percentage">---</td>
-                      <td class="col-num">---</td>
+                      <td class="col-count">---</td>
                     </tr>
                     <tr>
-                      <td class="col-name bg-basic">基礎<small>Basic</small></td>
-                      <td class="col-value">---</td>
+                      <td class="col-standardName bg-basic">基礎<small>Basic</small></td>
+                      <td class="col-standardValue">---</td>
                       <td class="col-percentage">---</td>
-                      <td class="col-num">---</td>
+                      <td class="col-count">---</td>
                     </tr>
                     <tr>
-                      <td class="col-name bg-belowBasic">基礎之下<small>Below Basic</small></td>
-                      <td class="col-value">---</td>
+                      <td class="col-standardName bg-belowBasic">基礎之下<small>Below Basic</small></td>
+                      <td class="col-standardValue">---</td>
                       <td class="col-percentage">---</td>
-                      <td class="col-num">---</td>
+                      <td class="col-count">---</td>
                     </tr>
                   </tbody>
                   <tfoot>
@@ -189,7 +189,7 @@
                   <thead>
                     <tr>
                       <th scope="col" class="col-class">班級</th>
-                      <th scope="col" class="col-name">學生姓名</th>
+                      <th scope="col" class="col-studentName">學生姓名</th>
                       <th scope="col" class="col-SR">SR分數</th>
                       <th scope="col" class="col-DACC"><a href="#" role="button" data-bs-toggle="popover" class="popover-DACClevel">DACC等級<i class="fa-regular fa-circle-question"></i></a></th>
                     </tr>
@@ -197,7 +197,7 @@
                   <tbody>
                     <tr>
                       <td class="col-class"><input type="text" class="form-control rounded-0 readonly" value="2" disabled readonly></td>
-                      <td class="col-name"><input type="text" class="form-control rounded-0 readonly" value="張花花" disabled readonly></td>
+                      <td class="col-studentName"><input type="text" class="form-control rounded-0 readonly" value="張花花" disabled readonly></td>
                       <td class="col-SR">336</td>
                       <td class="col-DACC">4</td>
                     </tr>
@@ -209,7 +209,7 @@
                   <thead>
                     <tr>
                       <th scope="col" class="col-class">班級</th>
-                      <th scope="col" class="col-name">學生姓名</th>
+                      <th scope="col" class="col-studentName">學生姓名</th>
                       <th scope="col" class="col-SR">SR分數</th>
                       <th scope="col" class="col-DACC"><a href="#" role="button" data-bs-toggle="popover" class="popover-DACClevel">DACC等級<i class="fa-regular fa-circle-question"></i></a></th>
                     </tr>
@@ -217,7 +217,7 @@
                   <tbody>
                     <tr>
                       <td class="col-class"><input type="text" class="form-control rounded-0 readonly" value="2" disabled readonly></td>
-                      <td class="col-name"><input type="text" class="form-control rounded-0 readonly" value="張花花" disabled readonly></td>
+                      <td class="col-studentName"><input type="text" class="form-control rounded-0 readonly" value="張花花" disabled readonly></td>
                       <td class="col-SR">336</td>
                       <td class="col-DACC">4</td>
                     </tr>
@@ -234,7 +234,7 @@
                   <thead>
                     <tr>
                       <th scope="col" class="col-class">班級</th>
-                      <th scope="col" class="col-name">學生姓名</th>
+                      <th scope="col" class="col-studentName">學生姓名</th>
                       <th scope="col" class="col-SR">SR分數</th>
                       <th scope="col" class="col-DACC"><a href="#" role="button" data-bs-toggle="popover" class="popover-DACClevel">DACC等級<i class="fa-regular fa-circle-question"></i></a></th>
                     </tr>
@@ -242,7 +242,7 @@
                   <tbody>
                     <tr>
                       <td class="col-class"><input type="text" class="form-control rounded-0 readonly" value="2" disabled readonly></td>
-                      <td class="col-name"><input type="text" class="form-control rounded-0 readonly" value="張花花" disabled readonly></td>
+                      <td class="col-studentName"><input type="text" class="form-control rounded-0 readonly" value="張花花" disabled readonly></td>
                       <td class="col-SR">336</td>
                       <td class="col-DACC">4</td>
                     </tr>
@@ -254,7 +254,7 @@
                   <thead>
                     <tr>
                       <th scope="col" class="col-class">班級</th>
-                      <th scope="col" class="col-name">學生姓名</th>
+                      <th scope="col" class="col-studentName">學生姓名</th>
                       <th scope="col" class="col-SR">SR分數</th>
                       <th scope="col" class="col-DACC"><a href="#" role="button" data-bs-toggle="popover" class="popover-DACClevel">DACC等級<i class="fa-regular fa-circle-question"></i></a></th>
                     </tr>
@@ -262,7 +262,7 @@
                   <tbody>
                     <tr>
                       <td class="col-class"><input type="text" class="form-control rounded-0 readonly" value="2" disabled readonly></td>
-                      <td class="col-name"><input type="text" class="form-control rounded-0 readonly" value="張花花" disabled readonly></td>
+                      <td class="col-studentName"><input type="text" class="form-control rounded-0 readonly" value="張花花" disabled readonly></td>
                       <td class="col-SR">336</td>
                       <td class="col-DACC">4</td>
                     </tr>
@@ -279,7 +279,7 @@
                   <thead>
                     <tr>
                       <th scope="col" class="col-class">班級</th>
-                      <th scope="col" class="col-name">學生姓名</th>
+                      <th scope="col" class="col-studentName">學生姓名</th>
                       <th scope="col" class="col-SR">SR分數</th>
                       <th scope="col" class="col-DACC"><a href="#" role="button" data-bs-toggle="popover" class="popover-DACClevel">DACC等級<i class="fa-regular fa-circle-question"></i></a></th>
                     </tr>
@@ -287,7 +287,7 @@
                   <tbody>
                     <tr>
                       <td class="col-class"><input type="text" class="form-control rounded-0 readonly" value="2" disabled readonly></td>
-                      <td class="col-name"><input type="text" class="form-control rounded-0 readonly" value="張花花" disabled readonly></td>
+                      <td class="col-studentName"><input type="text" class="form-control rounded-0 readonly" value="張花花" disabled readonly></td>
                       <td class="col-SR">336</td>
                       <td class="col-DACC">4</td>
                     </tr>
@@ -299,7 +299,7 @@
                   <thead>
                     <tr>
                       <th scope="col" class="col-class">班級</th>
-                      <th scope="col" class="col-name">學生姓名</th>
+                      <th scope="col" class="col-studentName">學生姓名</th>
                       <th scope="col" class="col-SR">SR分數</th>
                       <th scope="col" class="col-DACC"><a href="#" role="button" data-bs-toggle="popover" class="popover-DACClevel">DACC等級<i class="fa-regular fa-circle-question"></i></a></th>
                     </tr>
@@ -307,7 +307,7 @@
                   <tbody>
                     <tr>
                       <td class="col-class"><input type="text" class="form-control rounded-0 readonly" value="2" disabled readonly></td>
-                      <td class="col-name"><input type="text" class="form-control rounded-0 readonly" value="張花花" disabled readonly></td>
+                      <td class="col-studentName"><input type="text" class="form-control rounded-0 readonly" value="張花花" disabled readonly></td>
                       <td class="col-SR">336</td>
                       <td class="col-DACC">4</td>
                     </tr>
@@ -324,7 +324,7 @@
                   <thead>
                     <tr>
                       <th scope="col" class="col-class">班級</th>
-                      <th scope="col" class="col-name">學生姓名</th>
+                      <th scope="col" class="col-studentName">學生姓名</th>
                       <th scope="col" class="col-SR">SR分數</th>
                       <th scope="col" class="col-DACC"><a href="#" role="button" data-bs-toggle="popover" class="popover-DACClevel">DACC等級<i class="fa-regular fa-circle-question"></i></a></th>
                     </tr>
@@ -332,7 +332,7 @@
                   <tbody>
                     <tr>
                       <td class="col-class"><input type="text" class="form-control rounded-0 readonly" value="2" disabled readonly></td>
-                      <td class="col-name"><input type="text" class="form-control rounded-0 readonly" value="張花花" disabled readonly></td>
+                      <td class="col-studentName"><input type="text" class="form-control rounded-0 readonly" value="張花花" disabled readonly></td>
                       <td class="col-SR">336</td>
                       <td class="col-DACC">4</td>
                     </tr>
@@ -344,7 +344,7 @@
                   <thead>
                     <tr>
                       <th scope="col" class="col-class">班級</th>
-                      <th scope="col" class="col-name">學生姓名</th>
+                      <th scope="col" class="col-studentName">學生姓名</th>
                       <th scope="col" class="col-SR">SR分數</th>
                       <th scope="col" class="col-DACC"><a href="#" role="button" data-bs-toggle="popover" class="popover-DACClevel">DACC等級<i class="fa-regular fa-circle-question"></i></a></th>
                     </tr>
@@ -352,7 +352,7 @@
                   <tbody>
                     <tr>
                       <td class="col-class"><input type="text" class="form-control rounded-0 readonly" value="2" disabled readonly></td>
-                      <td class="col-name"><input type="text" class="form-control rounded-0 readonly" value="張花花" disabled readonly></td>
+                      <td class="col-studentName"><input type="text" class="form-control rounded-0 readonly" value="張花花" disabled readonly></td>
                       <td class="col-SR">336</td>
                       <td class="col-DACC">4</td>
                     </tr>
@@ -553,7 +553,6 @@ $(document).ready(function () {
         targets: 0,
         title: '班級',
         data: 'class',
-        width: '8%',
         className: 'col-class',
         type: 'string',
         render: function (data, type, row, meta) {
@@ -563,9 +562,8 @@ $(document).ready(function () {
       { //姓名
         targets: 1,
         title: '姓名',
-        data: 'Cname',
-        width: '8%',
-        className: 'col-Cname',
+        data: 'studentName',
+        className: 'col-studentName',
         orderDataType: 'dom-text',
         type: 'string',
         render: function (data, type, row, meta) {
@@ -576,7 +574,6 @@ $(document).ready(function () {
         targets: 2,
         title: 'SR分數',
         data: 'SR',
-        width: '5%',
         className: 'col-SR',
         type: 'numeric',
       },
@@ -584,7 +581,6 @@ $(document).ready(function () {
         targets: 3,
         title: '<a href="#" role="button" data-bs-toggle="popover" class="popover-DACClevel">DACC等級<i class="fa-regular fa-circle-question"></i></a>',
         data: 'DACClevel',
-        width: '5%',
         className: 'col-DACC',
         type: 'numeric',
       }
@@ -657,31 +653,31 @@ $(document).ready(function () {
               }
             });
 
-            $('.table-studentAssessment tbody tr:nth-child(4) .col-value')
+            $('.table-studentAssessment tbody tr:nth-child(4) .col-standardValue')
               .text('≤' + cutPoint[0]); //基礎之下
-            $('.table-studentAssessment tbody tr:nth-child(3) .col-value')
+            $('.table-studentAssessment tbody tr:nth-child(3) .col-standardValue')
               .text(cutPoint[0] + '-' + cutPoint[1]); //基礎
-            $('.table-studentAssessment tbody tr:nth-child(2) .col-value')
+            $('.table-studentAssessment tbody tr:nth-child(2) .col-standardValue')
               .text(cutPoint[1] + '-' + cutPoint[2]); //熟讀
-            $('.table-studentAssessment tbody tr:nth-child(1) .col-value')
+            $('.table-studentAssessment tbody tr:nth-child(1) .col-standardValue')
               .text('≥' + cutPoint[2]); //進階
           });
 
           //表格數據 - 人數
-          $('.table-studentAssessment tbody tr:nth-child(4) .col-num').text(totalBelowBasic); //基礎之下       
-          $('.table-studentAssessment tbody tr:nth-child(3) .col-num').text(totalBasic); //基礎
-          $('.table-studentAssessment tbody tr:nth-child(2) .col-num').text(totalProficient); //熟讀  
-          $('.table-studentAssessment tbody tr:nth-child(1) .col-num').text(totalAdvanced); //進階
+          $('.table-studentAssessment tbody tr:nth-child(4) .col-count').text(totalBelowBasic); //基礎之下       
+          $('.table-studentAssessment tbody tr:nth-child(3) .col-count').text(totalBasic); //基礎
+          $('.table-studentAssessment tbody tr:nth-child(2) .col-count').text(totalProficient); //熟讀  
+          $('.table-studentAssessment tbody tr:nth-child(1) .col-count').text(totalAdvanced); //進階
 
           //表格數據 - 百分占比
           $('.table-studentAssessment tbody tr .col-percentage').text(
             function () {
-              let perNum = $(this).next('.col-num').text() / total * 100;
+              let percentage = $(this).next('.col-count').text() / total * 100;
 
-              if (Number.isInteger(perNum)) {
-                return perNum.toFixed(0) + '%';
+              if (Number.isInteger(percentage)) {
+                return percentage.toFixed(0) + '%';
               } else {
-                return perNum.toFixed(1) + '%';
+                return percentage.toFixed(1) + '%';
               }
             }
           );
