--- a/SRteacher/account-class.html
+++ b/SRteacher/account-class.html
@@ -346,7 +346,7 @@
                         <td class="col-check"><div class="form-check form-check-inline SRform-check-red">
                             <input class="form-check-input m-0" type="checkbox" value="" id="" name="check">
                           </div></td>
-                        <td class="col-no">1</td>
+                        <td class="col-index">1</td>
                         <td class="col-account"><input type="text" class="form-control rounded-0 readonly" value="srtt01@smartreading.com" disabled readonly></td>
                         <td class="col-password"><input type="text" class="form-control rounded-0 readonly" value="1234" disabled readonly></td>
                         <td class="col-chineseName"><input type="text" class="form-control rounded-0 readonly" value="張花花" disabled readonly></td>
