--- a/SRteacher/RP-courseActivity.html
+++ b/SRteacher/RP-courseActivity.html
@@ -120,7 +120,7 @@
                   <td class="col-scroeComp"><span class="userScore passed byTeacher">A+</span></td>
                   <td class="col-likeCmt"><div class="d-inline mx-1"><img src="Content/images/icon-thumbs.png" alt="" class="me-1"/>1</div>
                     <div class="d-inline mx-1"><img src="Content/images/icon-comment.png" alt="" class="me-1"/>0</div></td>
-                  <td class="col-tools"><button type="button" class="btn btn-outline-primary bg-gradient px-2" data-review="sysTopic"><img src="Content/images/icon-eye.png" alt="" class="me-1"/>查看</button>
+                  <td class="col-tool"><button type="button" class="btn btn-outline-primary bg-gradient px-2" data-review="sysTopic"><img src="Content/images/icon-eye.png" alt="" class="me-1"/>查看</button>
                     <div class="form-check form-check-inline form-check-thumb mx-3">
                       <input class="form-check-input" type="checkbox" value="" id="checkThumb1" checked>
                       <label class="form-check-label" for="checkThumb1">讚</label>
@@ -140,7 +140,7 @@
                   <td class="col-scroeComp"><div><img src="Content/images/RPList/myStudy-note-done.png" alt="">&nbsp;<img src="Content/images/RPList/myStudy-paint-done.png" alt="">&nbsp;<img src="Content/images/RPList/myStudy-audio.png" alt="">&nbsp;<img src="Content/images/RPList/myStudy-video.png" alt=""></div></td>
                   <td class="col-likeCmt"><div class="d-inline mx-1"><img src="Content/images/icon-thumbs.png" alt="" class="me-1"/>0</div>
                     <div class="d-inline mx-1"><img src="Content/images/icon-comment.png" alt="" class="me-1"/>0</div></td>
-                  <td class="col-tools"><button type="button" class="btn btn-outline-primary bg-gradient px-2" data-review="myStudy"><img src="Content/images/icon-eye.png" alt="" class="me-1"/>查看</button>
+                  <td class="col-tool"><button type="button" class="btn btn-outline-primary bg-gradient px-2" data-review="myStudy"><img src="Content/images/icon-eye.png" alt="" class="me-1"/>查看</button>
                     <div class="form-check form-check-inline form-check-thumb mx-3">
                       <input class="form-check-input" type="checkbox" value="" id="checkThumb2" checked>
                       <label class="form-check-label" for="checkThumb2">讚</label>
@@ -320,7 +320,7 @@ $(document).ready(function () {
       { //我的操作
         targets: 8,
         title: '我的操作',
-        className: 'col-tools',
+        className: 'col-tool',
         type: 'string',
         render: function (data, type, row, meta) {
           return `<button type="button" class="btn btn-outline-primary bg-gradient px-2" data-review="${row.topicType}">
