--- a/SRteacher/myStudy.html
+++ b/SRteacher/myStudy.html
@@ -100,7 +100,7 @@
                     <label id="label_time">00:00</label>
                   </div>
                 </div>
-                <div class="audioRecord-tools">
+                <div class="audioRecord-tool">
 				  <button id="btn_startRec" class="tools__btn startRec" type="button"><i class="fa-solid fa-microphone" aria-hidden="true"></i>開始錄音</button>
                   <button id="btn_stopRec" class="tools__btn stopRec" type="button" style="display:none;"><i class="fa-solid fa-circle-stop" aria-hidden="true"></i>停止錄音</button>
                   <button id="btn_startPlay" class="tools__btn playRec" type="button" ><i class="fa-solid fa-play" aria-hidden="true"></i>播放錄音</button>
